# sqel

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/app/: connection_service.rs  mod.rs
src/cli/: args.rs  connection.rs  console.rs  mod.rs  output.rs  query.rs
src/cli/handlers/: connection_handler.rs  mod.rs  query_handler.rs
src/domain/: cell.rs  config.rs  connection.rs  driver_type.rs  mod.rs  query_result.rs
src/infra/: fs_config_store.rs  keychain_secret_store.rs  mod.rs
src/infra/drivers/: macros.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/ports/: config_store.rs  credential_provider.rs  driver.rs  mod.rs  secret_store.rs
tests/domain/: add_connection_request_test.rs  config_test.rs  connection_name_test.rs  connection_test.rs  driver_type_test.rs  mod.rs
