[package]
name = "sqel"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Universal database CLI for connecting, querying, exporting, and syncing across multiple database engines."
authors = ["Pavlo Polovyi <pasha32662@gmail.com>"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.59", features = ["derive"] }
directories = "6.0.0"
keyring = { version = "3.6.3", features =["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"
toml = "1.0.3"
url = "2.5.8"
thiserror = "2.0.18"
rpassword = "7.4.0"
comfy-table = "=7.2.2"
csv = "1.4.0"
serde_json = "1.0.149"
base64 = "0.22.1"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql",
    "sqlite", "json", "uuid", "chrono"] }
futures = "0.3.32"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
